prevent dropdown menu from being cut off by log out button

--- a/app/assets/stylesheets/base/user_results.scss
+++ b/app/assets/stylesheets/base/user_results.scss
@@ -35,3 +35,13 @@
     padding: 5px;
   }
 }
+
+.hidden {
+  &:hover {
+    background-color: burlywood !important;
+  }
+  // shame: need to let the last chat options dropdown menu go on top of the element that comes underneath it.
+  // without this hidden li, the menu gets cut off. temporary fix until something better
+  // the lack of a background color provides a better UI because the hover effect indicates a user to be
+  // clicked on
+}
